Added cloudformation interface

--- a/app/views/appmen/_form.html.erb
+++ b/app/views/appmen/_form.html.erb
@@ -15,22 +15,22 @@
     <%= f.label :name %>
     <%= f.text_field :name %>
   </div>
-
+<!--
   <div class="field">
     <%= f.label :stackmetadata %>
-    <%= f.text_area :stackmetadata %>
+    <%= f.text_area :stackmetadata, disabled: true %>
   </div>
 
   <div class="field">
     <%= f.label :stackid %>
-    <%= f.text_field :stackid %>
+    <%= f.text_field :stackid, disabled: true %>
   </div>
 
   <div class="field">
     <%= f.label :details %>
-    <%= f.text_area :details %>
+    <%= f.text_area :details, disabled: true %>
   </div>
-
+-->
   <div class="actions">
     <%= f.submit %>
   </div>
