--- a/app/views/appmen/index.html.erb
+++ b/app/views/appmen/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Application Managers</h1>
 
-<table>
+<table class="table table-hover table-striped">
   <thead>
     <tr>
       <th>Name</th>
@@ -21,7 +21,6 @@
         <td><%= appman.stackid %></td>
         <td><%= appman.details %></td>
         <td><%= link_to 'Show', appman %></td>
-        <td><%= link_to 'Edit', edit_appman_path(appman) %></td>
         <td><%= link_to 'Destroy', appman, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
