--- a/app/views/clouds/_form.html.erb
+++ b/app/views/clouds/_form.html.erb
@@ -126,17 +126,17 @@
 
   <div class="field">
    <%= f.label :k8snamespaces, "Namespaces" %>
-   <%= f.text_area :k8snamespaces %>
+   <%= f.text_field :k8snamespaces %>
   </div>
 
   <div class="field">
    <%= f.label :k8scontext, "Context" %>
-   <%= f.text_area :k8scontext %>
+   <%= f.text_field :k8scontext %>
   </div>
 
   <div class="field">
    <%= f.label :k8sdockerregistries, "Docker Registries" %>
-   <%= f.text_area :k8sdockerregistries %>
+   <%= f.text_field :k8sdockerregistries %>
   </div>
 </div>
 
@@ -144,32 +144,32 @@
   <%= f.label :dockerregistry %>
   <div class="field">
    <%= f.label :drenabled, "Enabled?" %>
-   <%= f.text_area :drenabled %>
+   <%= f.text_field :drenabled %>
   </div>  
 
   <div class="field">
    <%= f.label :draddress, "Address" %>
-   <%= f.text_area :draddress %>
+   <%= f.text_field :draddress %>
   </div>
  
   <div class="field">
    <%= f.label :drusername, "Username" %>
-   <%= f.text_area :drusername %>
+   <%= f.text_field :drusername %>
   </div>
 
   <div class="field">
    <%= f.label :drpassword, "Password" %>
-   <%= f.text_area :drpassword %>
+   <%= f.text_field :drpassword %>
   </div>
 
   <div class="field">
    <%= f.label :dremail, "Email" %>
-   <%= f.text_area :dremail %>
+   <%= f.text_field :dremail %>
   </div>
 
   <div class="field">
    <%= f.label :drrepositories, "Repositories" %>
-   <%= f.text_area :drrepositories %>
+   <%= f.text_field :drrepositories %>
   </div>
 </div>
 
@@ -177,42 +177,42 @@
   <%= f.label :openstack %>
   <div class="field">
    <%= f.label :osenabled, "Enabled?" %>
-   <%= f.text_area :osenabled %>
+   <%= f.text_field :osenabled %>
   </div>
   
   <div class="field">
    <%= f.label :osauthurl, "Auth URL" %>
-   <%= f.text_area :osauthurl %>
+   <%= f.text_field :osauthurl %>
   </div>
 
   <div class="field">
    <%= f.label :osusername, "Username" %>
-   <%= f.text_area :osusername %>
+   <%= f.text_field :osusername %>
   </div>
 
   <div class="field">
    <%= f.label :ospassword, "Password" %>
-   <%= f.text_area :ospassword %>
+   <%= f.text_field :ospassword %>
   </div>
 
   <div class="field">
    <%= f.label :osprojectname, "Project" %>
-   <%= f.text_area :osprojectname %>
+   <%= f.text_field :osprojectname %>
   </div>
 
   <div class="field">
    <%= f.label :osdomainname, "Domain" %>
-   <%= f.text_area :osdomainname %>
+   <%= f.text_field :osdomainname %>
   </div>
 
   <div class="field">
    <%= f.label :osregions, "Regions" %>
-   <%= f.text_area :osregions %>
+   <%= f.text_field :osregions %>
   </div>
 
   <div class="field">
    <%= f.label :osinsecure, "Insecure" %>
-   <%= f.text_area :osinsecure %>
+   <%= f.text_field :osinsecure %>
   </div>
 </div>
 </br>
