--- a/app/views/appmen/_form.html.erb
+++ b/app/views/appmen/_form.html.erb
@@ -31,6 +31,10 @@
     <%= f.text_area :details, disabled: true %>
   </div>
 -->
+  <div class="field">
+    <%= f.label :creds, "Select Credentials" %>
+    <%= f.select :cloud_ids, @current_user.clouds.all.collect {|c| [c.name, c.id] }, {}, :multiple => true %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
